--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
-  "name": "jp-post-api",
+  "name": "zipcodejp",
   "version": "0.1.0",
-  "description": "A RESTful API for searching Japan Address by zip-code",
-  "engines": {
-    "node": "12.x"
-  },
+  "description": "A RESTful API for searching Japan Address by Zipcode",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -21,16 +18,17 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ThaddeusJiang/jp-post-api.git"
+    "url": "https://github.com/ThaddeusJiang/ZipcodeJP.git"
   },
   "keywords": [
-    "japan",
+    "Japan",
     "post",
-    "zipcode",
-    "jp-code",
+    "Postal Code",
+    "Zipcode",
     "node",
     "heroku",
-    "express"
+    "express",
+    "API"
   ],
   "license": "MIT"
 }
