--- a/fly.toml
+++ b/fly.toml
@@ -1,39 +1,22 @@
-# fly.toml file generated for zipcodejp on 2022-12-15T22:09:57+09:00
+# fly.toml app configuration file generated for zipcodejp on 2024-05-29T20:25:47+09:00
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
 
-app = "zipcodejp"
-kill_signal = "SIGINT"
-kill_timeout = 5
-processes = []
+app = 'zipcodejp'
+primary_region = 'nrt'
 
-[env]
-  PORT = "8080"
+[build]
 
-[experimental]
-  allowed_public_ports = []
-  auto_rollback = true
+[http_service]
+  internal_port = 3000
+  force_https = true
+  auto_stop_machines = true
+  auto_start_machines = true
+  min_machines_running = 0
+  processes = ['app']
 
-[[services]]
-  http_checks = []
-  internal_port = 8080
-  processes = ["app"]
-  protocol = "tcp"
-  script_checks = []
-  [services.concurrency]
-    hard_limit = 25
-    soft_limit = 20
-    type = "connections"
-
-  [[services.ports]]
-    force_https = true
-    handlers = ["http"]
-    port = 80
-
-  [[services.ports]]
-    handlers = ["tls", "http"]
-    port = 443
-
-  [[services.tcp_checks]]
-    grace_period = "1s"
-    interval = "15s"
-    restart_limit = 0
-    timeout = "2s"
+[[vm]]
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
