--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.15.2"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.5.7",
     "request": "^2.81.0",
     "tape": "^4.7.0"
   },
